--- a/Classes - Year 1/Algebraic Combinatorics/Labs/Lab1-Posets_Intro.ipynb
+++ b/Classes - Year 1/Algebraic Combinatorics/Labs/Lab1-Posets_Intro.ipynb
@@ -31,7 +31,10 @@
    "execution_count": 3,
    "id": "af4c05",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -70,7 +73,10 @@
    "execution_count": 4,
    "id": "31da32",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -105,7 +111,10 @@
    "execution_count": 5,
    "id": "2e6dd2",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -183,7 +192,10 @@
    "execution_count": 6,
    "id": "3d13de",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -203,7 +215,10 @@
    "execution_count": 7,
    "id": "54cd17",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -303,7 +318,10 @@
    "execution_count": 8,
    "id": "9f43cd",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -363,7 +381,10 @@
    "execution_count": 9,
    "id": "0028ab",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -399,7 +420,10 @@
    "execution_count": 10,
    "id": "6d3bd5",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -433,7 +457,10 @@
    "execution_count": 11,
    "id": "695962",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -467,7 +494,10 @@
    "execution_count": 12,
    "id": "47cec3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -500,7 +530,10 @@
    "execution_count": 13,
    "id": "7a7a9b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -754,7 +787,10 @@
    "execution_count": 14,
    "id": "c45ceb",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -788,7 +824,10 @@
    "execution_count": 15,
    "id": "9f7b96",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -822,7 +861,10 @@
    "execution_count": 16,
    "id": "c97243",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -853,7 +895,10 @@
    "execution_count": null,
    "id": "ad8399",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -878,7 +923,10 @@
    "execution_count": null,
    "id": "f5e576",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -921,7 +969,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "# Poset dictionary\n",
@@ -959,7 +1011,10 @@
    "execution_count": 18,
    "id": "386b42",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -1048,7 +1103,10 @@
    "execution_count": 0,
    "id": "62830c",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": []
@@ -1067,7 +1125,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.12"
