--- a/Classes - Year 1/Algebraic Combinatorics/Labs/Lab2-Posets_2.ipynb
+++ b/Classes - Year 1/Algebraic Combinatorics/Labs/Lab2-Posets_2.ipynb
@@ -38,7 +38,10 @@
    "execution_count": 8,
    "id": "cf96b7",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -52,7 +55,10 @@
    "execution_count": 27,
    "id": "fe2671",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -142,7 +148,10 @@
    "execution_count": 32,
    "id": "9435e1",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -158,7 +167,10 @@
    "execution_count": 36,
    "id": "460e42",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -288,7 +300,10 @@
    "execution_count": 37,
    "id": "1145bf",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [],
    "source": [
@@ -313,7 +328,10 @@
    "execution_count": 38,
    "id": "56d0ac",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -348,7 +366,10 @@
    "execution_count": 57,
    "id": "46b32f",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -451,7 +472,10 @@
    "execution_count": 43,
    "id": "5901bd",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -484,7 +508,10 @@
    "execution_count": 45,
    "id": "7a506d",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -519,7 +546,10 @@
    "execution_count": 46,
    "id": "6950db",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -552,7 +582,10 @@
    "execution_count": 53,
    "id": "c544b2",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -586,7 +619,10 @@
    "execution_count": 58,
    "id": "872133",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -680,7 +716,10 @@
    "execution_count": 78,
    "id": "e9f693",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -818,7 +857,10 @@
    "execution_count": 99,
    "id": "8f34c2",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "python"
+    }
    },
    "outputs": [
     {
@@ -948,7 +990,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.12"
